[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "discord.py",
  "firebase-admin",
  "google-cloud-firestore",
  "requests",
  "aiohttp",
  "matplotlib",
  "python-dotenv"
]

[project.scripts]
run = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
package-dir = {"" = "src"}
